# legged-deploy

./: README.md
go2/: .gitignore  CMakeLists.txt  play.py  play_new.py  setup.py
go2/go2deploy/: __init__.py  filters.py  policy.py  utils.py
go2/src/: py.cpp
go2deploy/: .gitignore  CMakeLists.txt  play.py  play_new.py  policy.py
go2deploy/src/: py.cpp  robot_interface.hpp  test.cpp
